# lab21

./: CMakeLists.txt  CMake_lab21_7.cpp  CMake_lab21_7.h  Cmake_main.cpp
